Updated index file

--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
         <section id=about class="about-section">
             <div class="section-content">
                 <div class="about-image-wrapper">
-                    <img src="C:\Users\sylvi\OneDrive\Desktop\PLP Academy 2025\Web Development\MyPortfolio\IMG_20221205_161112.jpg"
-                        alt="A picture of myself" class="about-image">
+                    <img src="IMG_20221205_161112.jpg" alt="A picture of myself" class="about-image">
                 </div>
                 <div class="about-details">
                     <h2 class="section-title">About Me</h2>
